RESOLVED FIXED110278
Rubber-banding should not affect the visibleRect of the TileCache
https://bugs.webkit.org/show_bug.cgi?id=110278
Summary Rubber-banding should not affect the visibleRect of the TileCache
Simon Fraser (smfr)
Reported 2013-02-19 16:11:05 PST
Rubber-banding should not affect the visibleRect of the TileCache
Attachments
Patch (5.56 KB, patch)
2013-02-19 16:16 PST, Simon Fraser (smfr)
no flags
Patch (5.56 KB, patch)
2013-02-19 16:30 PST, Simon Fraser (smfr)
bdakin: review+
Simon Fraser (smfr)
Comment 1 2013-02-19 16:16:44 PST
Early Warning System Bot
Comment 2 2013-02-19 16:21:50 PST
Early Warning System Bot
Comment 3 2013-02-19 16:23:32 PST
Simon Fraser (smfr)
Comment 4 2013-02-19 16:30:17 PST
Simon Fraser (smfr)
Comment 5 2013-02-19 17:31:45 PST
Note You need to log in before you can comment on or make changes to this bug.